--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,13 @@
 {
     color: black;
     font-family: "Roboto", sans-serif;
+    
+    
+}
+body
+{
+    width:66vw;
+    background: rgba(200,200,200,1);
 }
 
 .header
@@ -10,7 +17,7 @@
     height: 15vh;
     margin: -10px;
     position: fixed;
-    background-color: rgba(250,250,250,1);
+    background-color: rgb(75, 70, 140);
 }
 
 .navigation
@@ -31,6 +38,11 @@
     gap:3vw;
 }
 
+.links a{
+    text-decoration: none;
+    
+}
+
 .header_links
 {
     list-style: none;
@@ -40,45 +52,198 @@
 
 .home
 {
-    width: 100%;
-    height: 30vh;
-    padding: 22vh 20vw; 
+    width: 98vw;
+    height: 87vh;
+    padding-top: 11.5vh;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
+    
 }
 
 .text_home
 {
     display: flex;
     flex-direction: column;
-    padding: 10vh 5vh
+    padding-top: 20vh;
+    padding-left: 3vw;
+    margin-top: 5vh;
+    background-color: grey;
+    height: 58.5vh;
+    width: 55vw;
    
 }
 
 #name_home
 {
-    font-size: 400%;
+    font-size: 500%;
+    font-weight: 400;
+    letter-spacing:normal;
 }
 
 #desc_home
 {
-    margin-top: -5vh;
-    font-size: 200%;
+    margin-top: -8vh;
+    font-size: 250%;
+    text-align: left;
+    font-weight: 250;
 }
 
 .image
 {
-    padding: 5vh 0.5vw
+    padding: 5vh 0.5vw;
 }
 #image_home
 {
     width: auto;
-    height: 50vh;
+    height: 78.5vh;
+    margin-left:3vw;
 
+}
+
+.part2
+{
+    height: 80vh;
+    width: 98vw;
+    
 }
 
 .about
 {
-    height: 1000px;
+    
+   
+    display: flex;
+    flex-direction: row;
+    
+    justify-content: center;
+    width: 98vw;
+    height: 78vh;
+    
+}
+
+.text_about
+{
+    background-color: grey;
+    height: 70vh;
+    width: 55vw;
+    padding-left: 5vw;
+    padding-top: 8vh;
+    margin-left: 3vw;
+
+   
+}
+
+#heading_about
+{
+    font-size: 500%;
+    font-weight: 400;
+
+}
+
+#desc_about
+{
+    width: 40vw;
+    font-size: 200%;
+    margin-top: -6vh;
+    font-weight: 300;
+}
+
+.image_about
+{
+    padding-left:10px;
+}
+
+.image_about img
+{
+    width:auto;
+    height: 78vh;
+}
+
+.part3
+{
+    height: 80vh;
+    width: 98vw;
+}
+
+.projects_main
+{
+    background-color: grey;
+    height: 75vh;
+    width: 83vw;
+    margin-left: 6vw;
+    padding-top: 10px;
+    padding-left: 5vw;
+   
+}
+
+.head_project
+{
+    font-size: 500%;
+    font-weight: 500;
+}
+
+.project_container
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 1vw
+    
+   
+}
+
+.projects
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 32vh;
+    width: 18vw;
+    border: 2px solid black;
+    border-radius: 5px;
+    padding: 15px 5px;
+    background-color: rgba(100,100,100,1)
+    
+    
+}
+
+.projects:hover
+{
+    background-color: lightblue;
+}
+
+.text_projects
+{
+    display: flex;
+    flex-direction: column;
+    padding-top: 1vw
+   
+}
+
+.image_projects img
+{
+    height:auto;
+    width: 18vw;
+}
+
+.heading_projects
+{
+  margin-top: -3px;
+  text-align: center;
+}
+
+
+
+
+.text_projects a
+{
+    text-align: center;
+    text-decoration: none;
+    font-size: 200%;
+
+}
+
+.github_repo
+{
+    border-top: 2px solid black;
 }
